feat: add landing page component with navbar and styles
- Created LandingPageComponent with a section displaying the title and subtitle.
- Added NavbarComponent for navigation with links and phone number.
- Implemented SCSS styles for both components, including responsive design.
- Integrated Noto Sans font for typography.
- Updated app.component to include LandingPageComponent.

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,30 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+src/assets/img/1_hero/JPG/great-britain.jpg
+src/assets/img/1_hero/JPG/hero_bg.jpg
+src/assets/img/1_hero/PNG/german.png
+src/assets/img/1_hero/PNG/phone.png
+src/assets/img/1_hero/PNG/sakura_logo.png
+src/assets/img/1_hero/SVG/phone.svg
+src/assets/img/1_hero/SVG/sakura_logo.svg
+src/assets/img/2_section_how_to_order/PNG/broth.png
+src/assets/img/2_section_how_to_order/PNG/egg.png
+src/assets/img/2_section_how_to_order/PNG/noodle.png
+src/assets/img/2_section_how_to_order/SVG/broth.svg
+src/assets/img/2_section_how_to_order/SVG/egg.svg
+src/assets/img/2_section_how_to_order/SVG/noodle.svg
+src/assets/img/3_section_our_menu/JPG/section_our_menu_bg.jpg
+src/assets/img/3_section_our_menu/Png/R1.png
+src/assets/img/3_section_our_menu/Png/R2.png
+src/assets/img/3_section_our_menu/Png/R3.png
+src/assets/img/4_section_find_us_at/PNG/map_marker.png
+src/assets/img/4_section_find_us_at/SVG/map_marker.svg
+src/assets/img/5_section_footer/PNG/facebook_logo.png
+src/assets/img/5_section_footer/PNG/instagrram_logo.png
+src/assets/img/5_section_footer/PNG/sakura_ramen_logo_and_text.png
+src/assets/img/5_section_footer/PNG/tripadvisor_logo.png
+src/assets/img/5_section_footer/SVG/facebook_logo.svg
+src/assets/img/5_section_footer/SVG/instagram_logo.svg
+src/assets/img/5_section_footer/SVG/sakura_ramen_logo_and_text.svg
+src/assets/img/5_section_footer/SVG/tripadvisor_logo.svg
